[gd_scene load_steps=8 format=3 uid="uid://bbo50i178jirw"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_6glya"]
[ext_resource type="Texture2D" uid="uid://260euredbq8j" path="res://art/grass.png" id="2_8naqd"]
[ext_resource type="Texture2D" uid="uid://vxky0jmvljkl" path="res://art/game_over.png" id="2_rmwhd"]
[ext_resource type="FontFile" uid="uid://dv3uphqwjuk7m" path="res://art/OtsutomeFont_Ver3.ttf" id="3_jnawi"]
[ext_resource type="Texture2D" uid="uid://bjfv5xaxy5s7s" path="res://art/rank/rank_D.png" id="4_3wxlt"]
[ext_resource type="Texture2D" uid="uid://bpxe1ksbxljav" path="res://art/rank/rank_letter_D.png" id="5_m0et1"]

[sub_resource type="LabelSettings" id="LabelSettings_gl0wf"]
line_spacing = 0.0
font = ExtResource("3_jnawi")
font_size = 64
shadow_size = 0
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-3, 3)

[node name="game_over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6glya")

[node name="Grass" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_8naqd")

[node name="Game_over_texture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -153.0
offset_right = 1127.0
offset_bottom = 720.0
texture = ExtResource("2_rmwhd")

[node name="Rank_char" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 920.0
offset_top = 1.0
offset_right = 1280.0
offset_bottom = 721.0
texture = ExtResource("4_3wxlt")

[node name="Rank_letter" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 652.0
offset_top = 454.0
offset_right = 908.0
offset_bottom = 710.0
texture = ExtResource("5_m0et1")

[node name="ButtonStart" type="Button" parent="."]
layout_mode = 0
offset_left = 274.0
offset_top = 421.0
offset_right = 480.0
offset_bottom = 525.0
theme_override_colors/font_color = Color(0.227451, 0.227451, 0.227451, 1)
theme_override_colors/font_pressed_color = Color(0.560784, 0.560784, 0.560784, 1)
theme_override_colors/font_hover_color = Color(0.380392, 0.380392, 0.380392, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("3_jnawi")
theme_override_font_sizes/font_size = 64
action_mode = 0
text = "Retry"
flat = true

[node name="ButtonQuit" type="Button" parent="."]
layout_mode = 0
offset_left = 273.0
offset_top = 542.0
offset_right = 479.0
offset_bottom = 646.0
theme_override_colors/font_color = Color(0.227451, 0.227451, 0.227451, 1)
theme_override_colors/font_pressed_color = Color(0.560784, 0.560784, 0.560784, 1)
theme_override_colors/font_hover_color = Color(0.380392, 0.380392, 0.380392, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("3_jnawi")
theme_override_font_sizes/font_size = 64
action_mode = 0
text = "Quit"
flat = true

[node name="Rank" type="Label" parent="."]
layout_direction = 3
layout_mode = 0
offset_left = 619.0
offset_top = 531.0
offset_right = 833.0
offset_bottom = 596.0
text = "Rank"
label_settings = SubResource("LabelSettings_gl0wf")

[node name="Score" type="Label" parent="."]
layout_direction = 3
layout_mode = 0
offset_left = 411.0
offset_top = 399.0
offset_right = 625.0
offset_bottom = 464.0
text = "0 points"
label_settings = SubResource("LabelSettings_gl0wf")
